--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -37,12 +37,12 @@
                                     TechCon Kenya provides a platform for entrepreneurs, developers, policy makers, investors and students to explore how digital tools can solve real-world challenges across sectors like agriculture, 
                                     <br>health, finance, education, and transport.
                                 </p>
-                       <iframe width="560" height="315" 
-                                  src="https://www.youtube.com/watch?v=5MWT_doo68k&pp=ygUPdGVjaCBjb25mZXJlbmNl0gcJCeAJAYcqIYzv"
-                                  title="OpenAI’s-Sam-Altman-Talks-ChatGPT-AI Agents" 
-                                  frameborder="2" 
-                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allowfullscreen>
-                      </iframe>
+                        <video controls="controls"  width="500px">
+                                    <source src="https://www.youtube.com/watch?v=5MWT_doo68k&pp=ygUPdGVjaCBjb25mZXJlbmNl0gcJCeAJAYcqIYzv"  type="OpenAI’s-Sam-Altman-Talks-ChatGPT-AI Agents" title ="TechCon" frameborder="2">
+                                    
+                        </video>
                <footer>
                    <p> &copy; TechCon2025 </p>
                </footer>
+
+             
