2. Designing the Schedule Page for TechCon 2024 Conference Website

--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -22,11 +22,12 @@
              </article>
              <div>
                     <table>    
-                          <thead>
+			    <caption>Detailed Schedule of Events for TechCon 2024</caption>
+                         <thead>
                                 <tr>
-                                     <th>Time</th>
-                                     <th>Session Title</th>
-                                     <th>Speaker/Facilitator</th>
+                                     <th scope="col" >Time</th>
+                                     <th scope="col" >Session Title</th>
+                                     <th scope="col" >Speaker/Facilitator</th>
                                      <th>Venue</th>  
                                  </tr>
                            </thead>
@@ -124,12 +125,11 @@
                            </tbody>
                    </table>
                </div>
- <!-- footer -->
-               <footer>
-                   <p> &copy; TechCon2025 </p>
-               </footer>
                </section>
             </main>
+            <footer>
+	       <p> &copy; TechCon2025 </p>    
+	    </footer>
       </body>
 </html> 
 
