4. Constructing the Contact Page for TechCon 2024 Conference Website

--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -25,7 +25,7 @@
     <h2>Contact Information</h2>
     
     <p>Email me at: 
-      <a href="mailto:eddiemartinnjau@gmail.com">eddiemartinnjau@gmail.com</a>
+      <a href="mailto:email@example.com">email@example.com</a>
     </p>
 
     <p>Connect with me on:</p>
